# incalescent

./: CMakeLists.txt  LICENSE  README.md  dialog.c  dialog.h  error.mc  file.c  file.h  generated_error.h  generated_error.rc  log.c  log.h  main.c  main.h  string.c  string.h
.github/workflows/: build.yml
